--- a/WebLegemClient/src/css/directivas/resultado_busqueda.css
+++ b/WebLegemClient/src/css/directivas/resultado_busqueda.css
@@ -26,7 +26,7 @@
         color:#0f745b;
         -moz-text-decoration-color: #0f745b;
         text-decoration-color: #0f745b;
-
+        cursor:pointer;
     }
 
 .contenido_tarjeta{
