--- a/WebLegemClient/src/app/usuarios/control-usuarios/control-usuarios.tmpl.html
+++ b/WebLegemClient/src/app/usuarios/control-usuarios/control-usuarios.tmpl.html
@@ -1,7 +1,7 @@
-﻿<div class="box_father">
+﻿<div class="box_father" ng-controller="controlUsuariosController as vm" ng-init="vm.unavez();">
 
     <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~1-->
-    <div class="box_left">
+    <div class="box_left" ng-wlonload="vm.name">
         <div class="box_input_ico">
             <input type="text" class="input_text_ico" maxlength="20" placeholder="Filtro" />
             <button class="btn_cancel" title="Quitar filtro" disabled>
@@ -24,21 +24,88 @@
                 </label>
             </li>
         </ul>
+        <button ewl wl-onload="vm.doIt()">Do It</button>
+
+        <button ewl wl-onhover="vm.doIts()">Do It2</button>
+
     </div>
 
 
     <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~2-->
     <div class="box_right">
-        <div class="controles_box_right">
-            <button class="btn_con_ico">
-                <span class="ico-plus tamano_botones_1"></span>nuevo
-            </button>
-            <button class="btn_con_ico">
-                <span class="ico-pencil tamano_botones_1"></span>editar
-            </button>
-            <button class="btn_con_ico">
-                <span class="ico-trash tamano_botones_1"></span>remover
-            </button>
+
+        <wl-admin-crud objeto-seleccionado="vm.entidadSeleccionada"
+                       editando="vm.editando"
+                       nuevo="vm.nuevo"
+                       eliminar="vm.remover">
+        </wl-admin-crud>
+
+        <div class="box_duo_input">
+            <div>
+                <p class="texto_labels green">Fotografia</p>
+                <div class="box_fotografia">
+                    <div class="foto_usuarios">
+                        <img src="" id="laimagen" style="height:100%; width:100%;"/>
+                        <input type="file" id="input_usu_foto"/>
+                    </div>
+                    <div>
+                        <button class="btn_ico" title="Tomar foto" ng-click="vm.abrirCamara();">
+                            <span class="ico-camera"></span>
+                        </button>
+
+                        <button class="btn_ico" title="Subir foto" ng-click="vm.seleccionarArchivo();">
+                            <span class="ico-upload"></span>
+                        </button>
+                        {{vm.trash}}
+                        <button  class="btn_ico" title="Borrar Foto" ng-show="vm.trash">
+                            <span class="ico-trash"></span>
+                            
+                        </button>
+
+
+                        <modal-dialog show="vm.camaraToggle">
+                            <div class='ng-modal-close' >
+                                <button class="btn_ico" title="Cerrar dialogo" ng-click="vm.cerrarCamara()">
+                                    <span class=" ico-times"></span>
+                                </button>
+                            </div>
+
+                            <div class="canvas_container">
+                                <video ng-show="vm.foto"   id="camaraUsu" width="320" height="240" autoplay></video>
+                                <canvas ng-show="!vm.foto" id="fotoUsu" width="320" height="240"></canvas>
+                            </div>
+
+                            <div id="botonera">
+                                <button ng-show="vm.foto" class="btn_con_ico" ng-click="vm.snapshot(); vm.foto = !vm.foto;">
+                                    <span class="ico-camera tamano_botones_1"></span>Tomar foto
+                                </button>
+                                <button ng-show="!vm.foto" class="btn_con_ico" ng-click="vm.repetirFoto();vm.foto = !vm.foto;">
+                                    <span class="ico-camera tamano_botones_1"></span>Repetir foto
+                                </button>
+                                <button ng-show="!vm.foto" class="btn_con_ico" ng-click="vm.guardarFoto()">
+                                    <span class="ico-camera tamano_botones_1"></span>Guardar foto
+                                </button>
+                            </div>
+
+                        </modal-dialog>
+                    </div>
+                </div>
+
+            </div>
+            <div>
+                <div>
+                    <p class="texto_labels green">Nombres</p>
+                    <input class="a_input" />
+                </div>
+                <div>
+                    <p class="texto_labels green">Apellidos</p>
+                    <input class="a_input" />
+                </div>
+                <div>
+                    <p class="texto_labels green">Nombre de Usuario</p>
+                    <input class="a_input" />
+                </div>
+            </div>
         </div>
 
         <div class="box_duo_input">
@@ -55,7 +122,7 @@
         <div class="box_duo_input">
             <div>
                 <p class="texto_labels green">Contraseña</p>
-                <input class="a_input" type="password"/>
+                <input class="a_input" type="password" />
             </div>
             <div>
                 <p class="texto_labels green">Confirmar contraseña</p>
@@ -75,7 +142,7 @@
         </div>
 
         <div class="box_duo_input">
-            
+
             <div>
                 <p class="texto_labels green">Estado del usuario</p>
                 <div class="contenedor_radios">
@@ -90,17 +157,10 @@
             <div></div>
         </div>
 
-        <div class="controles_box_right down">
-            <button class="btn_con_ico" type="button">
-                <span class="ico-plus tamano_botones_1"></span>Actualizar
-            </button>
-            <button class="btn_con_ico" type="button">
-                <span class="ico-plus tamano_botones_1"></span>Crear
-            </button>
-            <button class="btn_con_ico" type="button">
-                <span class="ico-times tamano_botones_1"></span>Cancelar
-            </button>
-        </div>
+        <wl-confirmacion editando="vm.editando"
+                         aceptar="vm.aceptar"
+                         cancelar="vm.cancelar">
+        </wl-confirmacion>
 
     </div>
 
