--- a/WebLegemClient/src/css/plantillas/news.css
+++ b/WebLegemClient/src/css/plantillas/news.css
@@ -3,8 +3,8 @@
     width: 100%;
     background: #fafbfe;
     background-image: url('../../recursos/header/IMG_2713P.jpg');
-    background-size:cover;
-    
+    background-image: url('../../recursos/header/paisaje.jpg');
+    background-size: cover;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
@@ -18,17 +18,18 @@
     justify-content:center;
     align-content:center;
     color:#FFF;
-    background:rgba(0, 0, 0, 0.66);
-    border-top: 10px solid #777;
+    background:rgba(0, 0, 0, 0.3);
+    box-shadow:0 -3px 10px 2px rgba(0, 0, 0, 0.3);
     border-bottom:1px solid #ccc;
     font-family:'Lato-Regular';
     font-size:35px;
-    height:100px;
+    height:80px;
     width:100%;
     padding:0 20px;
     position:relative;
     overflow:hidden;
     text-align:center;
+    margin-bottom:20px;
 }
 
 
@@ -57,7 +58,7 @@
 .tarjeta_news{
     padding:20px; 
     box-shadow:0 0 0 1px rgba(0, 0, 0, 0.05),0 1px 2px rgba(0, 0, 0, 0.3);
-    background:rgba(255, 255, 255, 0.82);
+    background:rgba(255, 255, 255, 0.95);
     margin:10px;
 }
 
