--- a/WebLegemClient/src/css/plantillas/usuarios.css
+++ b/WebLegemClient/src/css/plantillas/usuarios.css
@@ -54,7 +54,7 @@
     margin-bottom:5px;
 }
 
-.box_duo_input div{
+.box_duo_input > div{
     flex:1;
     min-width:250px;
 }
@@ -150,31 +150,43 @@
 }
 
 /**********************/
+.box_fotografia{
+    display:flex;
+    margin-top:2px;
+}
+
 .foto_usuarios{
     border:1px solid #bbb;
     min-width:150px !important;
     width:150px !important;
     height:170px;
-    display:flex;
-    justify-content:center;
-    align-items:center;
-
+    text-align:center;
 }
 
-.foto_usuarios > span{
-    color:#bbb;
+.foto_usuarios > span:before{
+    
+    color:#ddd;
     font-size:120px;
-    line-height:0;
+    display:block;
+    margin-top:20px;    
 }
 
-.box_fotografia{
-    display:flex;
-    margin-top:2px;
+#laimagen{
+    width:100%;
+    height:100%;
+    visibility:hidden;
 }
-.box_fotografia button{
+
+.botonera_camara {
+    display:flex;
+    flex-direction:column;
+    justify-content:flex-start !important;
     margin-left:5px;
+}
+.botonera_camara > button{
     margin-bottom:5px;
 }
+
 
 /*MODAL*/
 
